--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,9 +1,166 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".ui.pembeli.ProfileActivity">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="20dp"
+        android:background="@color/white"
+        android:orientation="vertical">
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:layout_marginLeft="-15dp"
+        android:layout_marginTop="10dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/topAppBar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:title="Profile"
+            app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24"
+            />
+    </com.google.android.material.appbar.AppBarLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="Nama Lengkap"
+                android:textColor="#79747E"
+                android:textSize="12sp"
+                app:fontFamily="@font/nunito_bold" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tv_nama"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="7dp"
+                android:text="Nadira Belinda"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                app:fontFamily="@font/nunito_bold" />
+
+
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="Username"
+                android:textColor="#79747E"
+                android:textSize="12sp"
+                app:fontFamily="@font/nunito_bold" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tv_usernames"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="7dp"
+                android:text="nadirabelinda"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                app:fontFamily="@font/nunito_bold" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="Tanggal Lahir"
+                android:textColor="#79747E"
+                android:textSize="12sp"
+                app:fontFamily="@font/nunito_bold" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tv_tgllahir"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="7dp"
+                android:text="12 December 2002"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                app:fontFamily="@font/nunito_bold" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="Email"
+                android:textColor="#79747E"
+                android:textSize="12sp"
+                app:fontFamily="@font/nunito_bold" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tv_email"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="7dp"
+                android:text="nadirabelinda"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                app:fontFamily="@font/nunito_bold" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="Alamat"
+                android:textColor="#79747E"
+                android:textSize="12sp"
+                app:fontFamily="@font/nunito_bold" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tv_alamat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="7dp"
+                android:text="nadirabelinda"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                app:fontFamily="@font/nunito_bold" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_edit_profile"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Edit Profile"
+                app:cornerRadius="8dp"
+                android:layout_marginTop="30dp"
+                android:padding="20dp"
+                android:textAlignment="gravity"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                android:backgroundTint="?attr/colorPrimary"
+                />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_edit_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Edit Password"
+                app:cornerRadius="8dp"
+                android:layout_marginTop="10dp"
+                android:padding="20dp"
+                android:textAlignment="gravity"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                app:strokeWidth="1dp"
+                app:strokeColor="?attr/colorPrimary"
+                android:backgroundTint="@color/white"
+                />
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+</ScrollView>
