--- a/app/src/main/res/layout/item_transaksi_berlangsung.xml
+++ b/app/src/main/res/layout/item_transaksi_berlangsung.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_marginBottom="15dp"
+    android:background="@color/white"
     android:layout_height="wrap_content">
 
     <com.makeramen.roundedimageview.RoundedImageView
@@ -40,67 +41,45 @@
             />
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_nama"
+            android:id="@+id/tv_metode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="15dp"
-            android:layout_marginTop="5dp"
             android:maxLines="1"
             android:textSize="13sp"
             android:ellipsize="end"
             android:fontFamily="@font/nunito"
-            android:textColor="@color/black"
-            android:text="Kentang goreng, cimol"
+            android:textColor="#79747E"
+            android:text="Metode pembayaran: tunai"
+            />
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tv_total"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="15dp"
+            android:maxLines="1"
+            android:textSize="13sp"
+            android:ellipsize="end"
+            android:fontFamily="@font/nunito"
+            android:textColor="#79747E"
+            android:text="2 produk"
             />
 
-
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tv_harga"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="15dp"
+            android:maxLines="1"
+            android:textSize="14sp"
+            android:ellipsize="end"
+            android:fontFamily="@font/nunito_bold"
+            android:textColor="@color/black"
+            android:text="Rp7.500"
+            />
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="15dp"
-        android:layout_weight="1"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/iv_event"
-        app:layout_constraintTop_toBottomOf="@id/asd">
-
-        <ImageView
-            android:layout_width="12dp"
-            android:layout_height="12dp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_star"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:text="4.5"/>
-        <ImageView
-            android:layout_width="12dp"
-            android:layout_height="12dp"
-            android:layout_marginLeft="20dp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_money"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:text="Rp1.000"/>
-
-    </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:layout_marginTop="15dp"
-        android:background="#9C9C9C"
-        app:layout_constraintTop_toBottomOf="@id/iv_event"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
