--- a/app/src/main/res/layout/activity_home_pedagang.xml
+++ b/app/src/main/res/layout/activity_home_pedagang.xml
@@ -81,31 +81,108 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/linear_head"
                 />
-
             <LinearLayout
-                android:id="@+id/linear_transaksi"
-                android:layout_width="match_parent"
-                android:layout_height="140dp"
-                android:orientation="vertical"
-                android:paddingVertical="40dp"
-                android:paddingHorizontal="20dp"
-                android:gravity="center"
+                android:id="@+id/pembungkus"
+               android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_title_transaksi">
-                <TextView
-                    android:id="@+id/tv_title_tidak_ada"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Transaksi berlangsung"
-                    android:fontFamily="@font/nunito"
-                    android:textColor="@color/black"
-                    android:textSize="14sp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/linear_head"
-                    />
+                app:layout_constraintTop_toBottomOf="@id/tv_title_transaksi"
+                android:orientation="vertical">
+                <LinearLayout
 
+                    android:layout_marginTop="10dp"
+                    android:id="@+id/linear_transaksi_gone"
+                    android:layout_width="match_parent"
+                    android:layout_height="140dp"
+                    android:orientation="vertical"
+                    android:paddingVertical="40dp"
+                    android:paddingHorizontal="20dp"
+                    android:gravity="center"
+                    >
+                     <TextView
+                        android:id="@+id/tv_title_tidak_ada"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Transaksi berlangsung"
+                        android:fontFamily="@font/nunito"
+                        android:textColor="@color/black"
+                        android:textSize="14sp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/linear_head"
+                        />
+
+                </LinearLayout>
+                <LinearLayout
+                    android:visibility="gone"
+                    android:clickable="true"
+                    android:background="@drawable/bg_kotak_maps"
+                    android:id="@+id/linear_transaksi_visible"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="20dp"
+                    android:layout_marginTop="10dp"
+                    >
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <TextView
+                            android:id="@+id/tv_nama"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Nadira Belinda"
+                            android:fontFamily="@font/nunito_bold"
+                            android:textStyle="bold"
+                            android:textColor="@color/black"
+                            android:textSize="14sp"
+                            />
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:orientation="horizontal"
+                            android:layout_marginLeft="15dp"
+                            android:layout_height="wrap_content">
+                            <ImageView
+                                android:layout_width="12dp"
+                                android:layout_height="12dp"
+                                android:layout_gravity="center"
+                                android:src="@drawable/ic_star"/>
+                            <TextView
+                                android:id="@+id/tv_rating"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="5dp"
+                                android:text="4.5"/>
+                        </LinearLayout>
+
+
+                    </LinearLayout>
+                    <TextView
+                        android:id="@+id/tv_meter"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="200m"
+                        android:layout_marginTop="3dp"
+                        android:fontFamily="@font/nunito"
+                        android:textStyle="bold"
+                        android:textColor="#79747E"
+                        android:textSize="12sp"
+                       />
+
+                    <TextView
+                        android:id="@+id/tv_pesanan"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Pesanan: 4 Kentang Goreng, 5 Cimol"
+                        android:layout_marginTop="3dp"
+                        android:fontFamily="@font/nunito"
+                        android:textColor="@color/black"
+                        android:textSize="12sp"
+                        />
+                </LinearLayout>
             </LinearLayout>
+
             <TextView
                 android:id="@+id/tv_title_pedagang"
                 android:layout_width="wrap_content"
@@ -117,11 +194,12 @@
                 android:textSize="14sp"
                 android:layout_marginTop="20dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/linear_transaksi"
+                app:layout_constraintTop_toBottomOf="@id/pembungkus"
                 />
 
             <LinearLayout
                 android:clickable="true"
+                android:background="@drawable/bg_kotak_maps"
                 android:paddingHorizontal="15dp"
                 android:paddingVertical="10dp"
                 android:id="@+id/linear_body"
@@ -131,7 +209,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="20dp"
                 android:orientation="horizontal"
-                android:background="@drawable/bg_kotak_maps"
                 app:layout_constraintTop_toBottomOf="@id/tv_title_pedagang"
                 >
                 <ImageView
