--- a/app/src/main/res/layout/activity_home_page_pembeli.xml
+++ b/app/src/main/res/layout/activity_home_page_pembeli.xml
@@ -78,6 +78,9 @@
                 android:background="@drawable/bg_search"
                 app:queryHint="Cari pedagang keliling terdekat" />
 
+
+
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_pedagang"
                 android:orientation="vertical"
@@ -91,6 +94,16 @@
                 app:layout_constraintBottom_toTopOf="@id/btn_map"
                 app:layout_constraintTop_toBottomOf="@id/searchView"
                 />
+
+            <ProgressBar
+                android:visibility="gone"
+                android:id="@+id/progressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:indeterminateTint="?android:attr/colorPrimary"
+                app:layout_constraintTop_toBottomOf="@id/searchView"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_map"
