--- a/app/src/main/res/layout/item_produk.xml
+++ b/app/src/main/res/layout/item_produk.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content">
 
     <com.makeramen.roundedimageview.RoundedImageView
-        android:id="@+id/iv_event"
+        android:id="@+id/iv_gambar"
         android:layout_width="90dp"
         android:scaleType="centerCrop"
         app:riv_corner_radius="10dp"
@@ -21,7 +21,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        app:layout_constraintStart_toEndOf="@id/iv_event"
+        app:layout_constraintStart_toEndOf="@id/iv_gambar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         >
@@ -40,7 +40,7 @@
             />
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_nama"
+            android:id="@+id/tv_produk"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="15dp"
@@ -65,7 +65,7 @@
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/iv_event"
+        app:layout_constraintStart_toEndOf="@+id/iv_gambar"
         app:layout_constraintTop_toBottomOf="@id/asd">
 
         <ImageView
@@ -74,6 +74,7 @@
             android:layout_gravity="center"
             android:src="@drawable/ic_star"/>
         <TextView
+            android:id="@+id/tv_rating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
@@ -85,6 +86,7 @@
             android:layout_gravity="center"
             android:src="@drawable/ic_money"/>
         <TextView
+            android:id="@id/tv_harga"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
@@ -97,7 +99,7 @@
         android:layout_height="0.5dp"
         android:layout_marginTop="15dp"
         android:background="#9C9C9C"
-        app:layout_constraintTop_toBottomOf="@id/iv_event"
+        app:layout_constraintTop_toBottomOf="@id/iv_gambar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         />
