--- a/app/src/main/res/layout/activity_detail_pedagang.xml
+++ b/app/src/main/res/layout/activity_detail_pedagang.xml
@@ -56,6 +56,7 @@
             android:orientation="vertical"
             >
             <TextView
+                android:id="@+id/tv_nama_merchant"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Kentang Goreng RR"
@@ -74,6 +75,7 @@
                     android:layout_marginTop="2dp"
                     android:src="@drawable/ic_star_kecil"/>
                 <TextView
+                    android:id="@+id/tv_rating"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="4.5"
@@ -133,15 +135,27 @@
             app:layout_constraintTop_toBottomOf="@id/tvTitle"
             tools:listitem="@layout/item_detail_produk" />
 
+        <ProgressBar
+            android:visibility="gone"
+            android:id="@+id/progressBar"
+            android:layout_marginTop="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminateTint="?android:attr/colorPrimary"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvTitle"/>
+
         <View
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="60dp"
             android:layout_marginTop="15dp"
             app:layout_constraintTop_toBottomOf="@id/rv_produk"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             />
         <LinearLayout
+            android:visibility="gone"
             android:id="@+id/btn_pesan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
