--- a/app/src/main/res/layout/item_detail_produk.xml
+++ b/app/src/main/res/layout/item_detail_produk.xml
@@ -10,7 +10,7 @@
     android:layout_height="wrap_content">
 
     <com.makeramen.roundedimageview.RoundedImageView
-        android:id="@+id/iv_event"
+        android:id="@+id/iv_gambar"
         android:layout_width="90dp"
         android:scaleType="centerCrop"
         app:riv_corner_radius="10dp"
@@ -24,7 +24,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        app:layout_constraintStart_toEndOf="@id/iv_event"
+        app:layout_constraintStart_toEndOf="@id/iv_gambar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         >
@@ -66,9 +66,10 @@
         android:layout_height="match_parent"
         android:layout_marginLeft="15dp"
         android:layout_weight="1"
+        android:layout_marginTop="5dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/iv_event"
+        app:layout_constraintStart_toEndOf="@+id/iv_gambar"
         app:layout_constraintTop_toBottomOf="@id/asd">
         <ImageView
             android:layout_width="16dp"
@@ -89,7 +90,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="right"
-        app:layout_constraintTop_toBottomOf="@id/iv_event"
+        app:layout_constraintTop_toBottomOf="@id/iv_gambar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
         
